docs: add  documentation ffor listOpenings
