# handlers/response.go
@@ -44,3 +44,8 @@ type ShowOpeningResponse struct {
 	Message string                  `json:"message"`
 	Data    schemas.OpeningResponse `json:"data"`
 }
+
+type ListOpeningsResponse struct {
+	Message string                  `json:"message"`
+	Data    []schemas.OpeningResponse `json:"data"`
+}
